220804 RNN add step; add MR (Max Reward report)
220804 add n-steps RNN
220728 add atari env play test
220721 fix graph building: new edge in the same node; current traj. crossing step correction; remove dynamic e-greedy
220720 add graph-shape statistic
220719 add auto batch division for vp on very large graphs
220719 graph sanity check and cmd block fixed
220719 bug fix, and auto debugging
220618 merge three atari env 
220613 bug fix
220419 add maze env
220413 file log output bug fixed
220413 worker cannot return issue solved
220408 worker cannot return issue
220408 last controllable step not in the graph
220408 testing whole env obj hashing
220408 output improved, termination fixed
220406 exception handler fix
220406 config printer fix
220401 add historical hashing env
220322 bug fix: action override during graph construction
220316 add graph visualization component
220221 add traj. intersection detection
220221 sync by pipe
211206 auto propagation: (SOLVED) issue: fake stochastics and self loop: add trustness / confidence of transition 
211206 improve dag build for cycle detection
211205 bug fixed
211205 add cuda mps
211127 rethinking state modeling
211127 add rnn projector
211127 auto propagation: (SOLVED) issue: cycle / self-loop is not a issue now
211102 auto propagation: issue: cycle / self-loop detection and amend
211102 auto propagation: loop detection and amend
211102 auto propagation: remove cpu value propagation
211101 auto propagation: gpu value propagation
211031 auto propagation: shrunk graph building alg fix
211027 auto propagation: (SOLVED) issue: value propagation slow 
211025 auto propagation: issue: fake stochastics and self loop
211024 auto propagation: redesign
211021 auto propagation: remove transition graph and simplify code
211020 auto propagation: step 3, improve memory consumption
211020 auto propagation: remove storage cell due to high memory consumption
211019 auto propagation: step 3, add trajectory info