@@ -1,3 +1,4 @@
+220805 finish bug fixed
 220804 RNN add step; add MR (Max Reward report)
 220804 add n-steps RNN
 220728 add atari env play test
